[gd_scene load_steps=3 format=3 uid="uid://dwq6tsuoepkw0"]

[ext_resource type="Script" path="res://Scenes/Main Menu/main_menu.gd" id="1_0jam3"]
[ext_resource type="Texture2D" uid="uid://nav04ap3rdbe" path="res://Graphics/new_game_popup.png" id="2_1jdbj"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0jam3")

[node name="continue_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.5
offset_right = 91.0
offset_bottom = 15.5
grow_vertical = 2
disabled = true
text = "CONTINUE"

[node name="new_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = "NEW"

[node name="tutorial_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 31.0
grow_horizontal = 2
text = "TUTORIAL"

[node name="name_edit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -67.0625
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
placeholder_text = "name"

[node name="prefix_edit" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -105.0
offset_top = -71.0
offset_bottom = -40.0
grow_horizontal = 0
grow_vertical = 0
item_count = 3
popup/item_0/text = "Sir"
popup/item_0/id = 0
popup/item_1/text = "Madam"
popup/item_1/id = 1
popup/item_2/text = "Captain"
popup/item_2/id = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
custom_minimum_size = Vector2(450, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -300.0
offset_right = 225.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 3

[node name="TextureRect" type="TextureRect" parent="AspectRatioContainer"]
layout_mode = 2
texture = ExtResource("2_1jdbj")
stretch_mode = 5

[node name="ScrollContainer" type="ScrollContainer" parent="AspectRatioContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="AspectRatioContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="AspectRatioContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "gdkgkjgdjgdigdij"

[connection signal="pressed" from="continue_button" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="new_button" to="." method="_on_new_button_pressed"]
[connection signal="pressed" from="tutorial_button" to="." method="_on_tutorial_button_pressed"]
